# gnome-app-template

./: .dir-locals.el  AUTHORS  Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am  app.desktop.in.in  app.gresource.xml
data/gtk/: app-menu.ui
data/icons/: Makefile.am
po/: POTFILES.in
src/: Makefile.am  application-window.c  application-window.h  application.c  application.h  main.c  utils.c  utils.h
